# shatter

./: .dockerignore  .gitattributes  .gitmodules  ARTIFACT-EVALUATION.md  Dockerfile  LICENSE  README.rst  docker-build.sh  docker-copy-exp-1.sh  docker-copy-exp-2.sh  docker-run.sh  prerequisites.sh  requirements.txt  requirements_all.txt  requirements_base.txt  setup.cfg  testing-script.sh
.github/workflows/: docker-image.yml
artifact_scripts/gradientInversion/: gradientInv.ipynb  lpips_stats.csv  snr_stats.csv  ssim_stats.csv
artifact_scripts/gradientInversion/rog/: .gitattributes  README.md  aggregateLPIPS.py  attack_fedavg.py  attack_vnodes.py  main.py  requirements.txt  run.sh
artifact_scripts/small_scale/: run.sh  run_CIFAR10.sh  run_Movielens.sh  run_Twitter.sh  run_all.sh
artifact_scripts/small_scale/CIFAR10/: config_EL.ini  config_Muffliato05.ini  config_Shatter2.ini
artifact_scripts/small_scale/Movielens/: config_Muffliato025.ini  config_Shatter2.ini  ip.json
artifact_scripts/small_scale/Twitter/: config_EL.ini  config_Muffliato009.ini  config_Shatter2.ini
decentralizepy/: setup.cfg
decentralizepy/eval/: testingKFN.py
decentralizepy/eval/step_configs/: config_femnist_subsampling.ini
decentralizepy/src/decentralizepy/: utils.py
eval/: evaluate_attack.py  plot_csv_acc.py  run_helper.sh  testing.py  testingDropouts.py  testingMuffliato.py  testingSimulation.py
src/virtualNodes/attacks/: LinkabilityAttack.py  LinkabilityAttackTwitter.py
src/virtualNodes/mappings/: VNodeLinear.py
src/virtualNodes/node/: VNode.py  VNodeFake.py  VNodeReal.py  (+2 more)
(+163 files in other folders)
